updated text, reply

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -271,13 +271,13 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
       \textbf{Informative priors}
 
-        We often have some prior knowledge which can inform uncertainty about interactions. One common example is the well-justified assumption that plants never consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truly do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,s,Gravel2018}. Multiple sources of information can be combined into a single model (e.g., the the $K$ nearest neighbour (KNN) algorithm, which identifies likely interaction partners based on similarity to known partners~\citep{DesjardinsProulx2017}). This would result in a highly informative prior that would, moreover, account for some of the non-independence in interaction probabilities. 
+        We often have some prior knowledge which can inform uncertainty about interactions. One common example is the well-justified assumption that plants never consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truly do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,Gravel2018}. Multiple sources of information can be combined into a single model (e.g., the the $K$ nearest neighbour (KNN) algorithm, which identifies likely interaction partners based on similarity to known partners~\citep{DesjardinsProulx2017}). This would result in a highly informative prior that would, moreover, account for some of the non-independence in interaction probabilities. 
 
 
         Using an informative prior tailors the level of uncertainty surrounding each interaction and may account for non-independence of interactions (as in abundance-based or KNN models). Despite these benefits, informative priors often involve many assumptions and carry a risk of over-fitting. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017a}).
 
 
-        Alternatively, one can develop a prior based on the properties of a set of published networks (``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). This type of prior entails only one assumption: that the focal network has similar structural properties to those of some published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of published connectances can be used to predict the distribution of interaction probabilities in a new network that is similar to those used to construct the prior (same type of interaction, similar taxonomic resolution, habitat, etc.). If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
+        Alternatively, if information on the traits affecting interaction probabilities is lacking, one can develop a prior based on the properties of a set of published networks (``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). This type of prior does not vary between species pairs but entails only one assumption: that the focal network has similar structural properties to those of some published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of published connectances can be used to predict the distribution of interaction probabilities in a new network that is similar to those used to construct the prior (same type of interaction, similar taxonomic resolution, habitat, etc.). If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
 
         \begin{equation}
         \alpha_{ij}=\overline{C}(\frac{\overline{C}(1-\overline{C})}{\sigma_C^2}-1) ,
@@ -289,9 +289,6 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   
 
         Note that here the prior distribution will be the same for all interaction probabilities. It is also possible to interpret other network properties (e.g., species degrees) in a similar network(s) as interaction probabilities and use these to create a prior (worked example in \emph{Appendix S4}). When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the focal system is large and contains a diverse array of species, it would be inappropriate to use a prior distribution drawn from a small network describing closely-related taxa (demonstrated in \emph{Appendix S7}). Similarly, data from a network where nodes are resolved to different taxonomic levels than the focal network are likely to have quite different properties and would not be an appropriate prior.
-
-
-        Note that if the focal network is substantially different from published networks, empirical Bayes will not give reasonable expectations about interaction probabilities in the focal network. [[Seems like R1 is demanding we add some more about how empirical Bayes is crap ... maybe we can say it'd give a reasonable expectation for the number of interactions but maybe not the right ones?]]
 
 
         If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., ``approximate Bayes"~\citet{Gelmanblog})~\citep{Spiegelhalter2000}. This approach is used in medical testing~\citep{Spiegelhalter2000} and disease modelling~\citep{Leyland2005} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, approximate Bayes allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticised for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We therefore illustrate this approach in the following empirical example.
@@ -379,7 +376,7 @@ All data used in this study have been independently published and are accessible
 \end{spacing}
 \clearpage
 
-\captionsetup{singlelinecheck=false, font={stretch=2}}
+% \captionsetup{singlelinecheck=false, font={stretch=2}}
 
 \section*{Figures}
 
