--- a/manuscript/reply_to_reviewers_2.tex
+++ b/manuscript/reply_to_reviewers_2.tex
@@ -110,7 +110,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} We do not share the Reviewer's highly negative view of empirical Bayes. Perhaps this is a matter of perspective: the Reviewer's work seems to focus on a system where a great deal of information about the traits structuring interactions is known and trait values are available for almost all species. In such a system it is absolutely best to use a trait-based model to predict interactions. This is why we began our section on informative priors with trait-based models and only introduce empirical and approximate Bayes as solutions where trait information/models are lacking or where over-fitting is a strong concern. Most of the authors of this manuscript are more used to such relatively information-poor systems. In these cases, we agree that empirical Bayes is not perfect but argue that it is much better than nothing (or an uninformative prior, as long as a somewhat similar network is available).
+		\textbf{R:} We do not share the Reviewer's negative view of empirical Bayes. Perhaps this is a matter of perspective: in a system where a great deal of information about the traits structuring interactions is known and trait values are available for most species, it is absolutely best to use a trait-based model to predict interactions. This is why we began our section on informative priors with trait-based models and only introduce empirical and approximate Bayes as solutions where trait information/models are lacking or where over-fitting is a strong concern. Most of the authors of this manuscript are more used to such relatively information-poor systems. In these cases, we agree that empirical Bayes is not perfect but argue that it is much better than nothing (or an uninformative prior, as long as a somewhat similar network is available).
 
 
 		The Jeffreys prior gives a maximum likelihood estimate of 0.5 for the probability of an interaction between two species which have never been observed together. Based on our understanding of ecological systems, this seems highly unlikely. Certainly species differ in many ways, but they also do have some similarities, such as limited foraging time and somewhat consistent morphologies. Because of behavioural, morphological, or temporal limits to the number of partners with which a given species can interact, most ecological networks are sparse and most well-sampled species interact with only a small subset of their potential partners (extreme generalists in highly nested mutualistic networks being a notable exception). We can therefore reasonably expect that a species entering a new habitat, for example, will interact with far fewer than half of the available partners. If we do not know which traits strongly affect interactions involving the focal species, or if those traits are not known for all of the species in the network, we cannot use a trait-based model to predict interaction frequencies. This leaves empirical and approximate Bayes as the only viable options unless we are willing to revert to the assumption that unobserved interactions never occur. Certainly empirical Bayes is not perfect, but we are strongly confident that it is still gives more reasonable expectations than ignoring the ecological networks literature.
@@ -119,7 +119,7 @@
 		Moreover, while we agree that empirical Bayes does not take differences in niche proxies into account, this may not be crucial in all studies. Researchers are often more interested in the overall structure of the network or in some emergent property such as stability than in the relationships between niche proxies and interaction frequencies. In such cases, the number of additional interactions we expect to be observed with further sampling is likely more important than the exact identity of those interactions, and an empirical Bayes approach is reasonable if a good trait-based model and trait information or not available. 
 
 
-		Finally, we must disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasize the need to use similar networks to construct an empicial Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. 
+		Finally, we disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasize the need to use similar networks to construct an empirical Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. 
 
 
 		We believe that including an expanded reference to \emph{Appendix S7} as suggested below will help to address some of these concerns by demonstrating that empirical Bayes should \emph{not} be based on networks which have major differences from the focal system as this will lead to unreasonable predictions (in our case, although the taxa and interaction types involved were similar, the taxonomic resolution in the \citet{Barbour2016} and \citet{Kopelke2017} were very different). To reinforce this point and make the role of empirical Bayes as a solution in the absence of trait-based models and/or trait information, we have made several minor revisions to the section introducing informative priors. We hope that these changes will be sufficient to illustrate the drawbacks to empirical Bayes without being overly discouraging for those who lack the necessary information to construct more detailed informative priors.
@@ -155,7 +155,7 @@
 		\end{quotation}
 
 
-		Finally, please note that we do discuss caveats to the empirical Bayes approach in lines 272-281, including the possibility that priors based on substantailly different systems will be misleading (with reference to \emph{Appendix S7}) and that published data may reflect under-sampled data:
+		Finally, we discuss caveats to the empirical Bayes approach in lines 272-281, including the possibility that priors based on substantially different systems will be misleading (with reference to \emph{Appendix S7}) and that published data may reflect under-sampled data:
 
 
 		\begin{quotation}
