agree with Annas comments, spellchecked

--- a/manuscript/reply_to_reviewers_2.tex
+++ b/manuscript/reply_to_reviewers_2.tex
@@ -74,7 +74,7 @@
 
 	We thank the Reviewer for his further feedback and address each point (prefaced by \textbf{R:}) below.
 
-	1. Re-emphasize Figure 3. 
+	1. Re-emphasise Figure 3. 
 
 		\begin{refquote}
 
@@ -83,7 +83,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} We thank the Reviewer for his complement to Figure 3. Although we wish to keep any additions as brief as possible, we are happy to add a short reference to Figure 3 in the discussion as part of an example of how to use our simple Bayesian framework when thinking about insects moving into new communities (e.g., as climate changes). We hope that this puts the figure in a more central place, as intended. We also now include a similar figure demonstrating the effect of a change in prior on the posterior pdf's obtained for the \emph{Salix}-galler networks and hope that this also helps to emphasize these results.
+		\textbf{R:} We thank the Reviewer for his complement to Figure 3. Although we wish to keep any additions as brief as possible, we are happy to add a short reference to Figure 3 in the discussion as part of an example of how to use our simple Bayesian framework when thinking about insects moving into new communities (e.g., as climate changes). We hope that this puts the figure in a more central place, as intended. We also now include a similar figure demonstrating the effect of a change in prior on the posterior pdf's obtained for the \emph{Salix}-galler networks and hope that this also helps to emphasise these results.
 
 
 		Lines 379-389:
@@ -95,12 +95,12 @@
 		\end{quotation}
 
 
-	2. Emphasize the drawbacks of empirical Bayes
+	2. Emphasise the drawbacks of empirical Bayes
 
 
 		\begin{refquote}
 
-			I think the authors miss one key discomfort with empirical bayes. It seems vaguely anti-ecology, because it assumes that we can L289 : “use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely.”  A common goal in network ecology is to describe interaction frequencies by using niche-based proxies (phylogeny, traits, etc). If it was a simply a matter that most networks had the same degree distribution, then predicting networks would be much easier than it is. In fact, we are really bad at predicting pairwise interactions (see Olito and Fox), even when we get the emergent structure of the network correct. Yet empirical bayes assumes a kind of commonality among all networks to help narrow the posteriors. I think the authors need to speak to this concern.
+			I think the authors miss one key discomfort with empirical Bayes. It seems vaguely anti-ecology, because it assumes that we can L289 : “use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely.”  A common goal in network ecology is to describe interaction frequencies by using niche-based proxies (phylogeny, traits, etc). If it was a simply a matter that most networks had the same degree distribution, then predicting networks would be much easier than it is. In fact, we are really bad at predicting pairwise interactions (see Olito and Fox), even when we get the emergent structure of the network correct. Yet empirical Bayes assumes a kind of commonality among all networks to help narrow the posteriors. I think the authors need to speak to this concern.
 
 		\end{refquote}
 
@@ -114,7 +114,7 @@
 		Moreover, while we agree that empirical Bayes does not take differences in niche proxies into account, this may not be crucial in all studies. Researchers are often more interested in the overall structure of the network or in some emergent property such as stability than in the relationships between niche proxies and interaction frequencies. In such cases, the number of additional interactions we expect to be observed with further sampling is likely more important than the exact identity of those interactions, and an empirical Bayes approach is reasonable if a good trait-based model and trait information or not available. 
 
 
-		Finally, we disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasize the need to use similar networks to construct an empirical Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. 
+		Finally, we disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasise the need to use similar networks to construct an empirical Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. 
 
 
 		We believe that including an expanded reference to \emph{Appendix S7} as suggested below will help to address some of these concerns by demonstrating that empirical Bayes should \emph{not} be based on networks which have major differences from the focal system as this will lead to unreasonable predictions (in our case, although the taxa and interaction types involved were similar, the taxonomic resolution in the \citet{Barbour2016} and \citet{Kopelke2017} were very different). To reinforce this point and make the role of empirical Bayes as a solution in the absence of trait-based models and/or trait information, we have made several minor revisions to the section introducing informative priors. We hope that these changes will be sufficient to illustrate the drawbacks to empirical Bayes without being overly discouraging for those who lack the necessary information to construct more detailed informative priors.
@@ -166,12 +166,12 @@
 
 		\begin{refquote}
 		
-			My final lingering concern is that something like appendix 7 seems important and should be included in the text? Was this done because of space limitations? I think the authors can appeal to the editor that the paper merits the extra space. As a compromise there could to be atleast a paragraph on what can go wrong and what that looks like. I think a figure would be useful here. If the informed/empirical priors are too narrow, the data will not really move the posterior. The authors certainly acknowledge it in various places, but it needs to be clearer to the reader.
+			My final lingering concern is that something like appendix 7 seems important and should be included in the text? Was this done because of space limitations? I think the authors can appeal to the editor that the paper merits the extra space. As a compromise there could to be at least a paragraph on what can go wrong and what that looks like. I think a figure would be useful here. If the informed/empirical priors are too narrow, the data will not really move the posterior. The authors certainly acknowledge it in various places, but it needs to be clearer to the reader.
 
 		\end{refquote}
 
 
-		\textbf{R:} This material was indeed placed in an appendix because of space constraints. We have added a figure showing the posterior distributions obtained from both priors and a paragraph summarizing \emph{Appendix 7}. As we do not wish to be too demanding with regard to extra space (and our manuscript was essentially at the standard length limit after the last revision), we hope that these smaller additions will be enough to emphasize the potential for spurious results after poor prior choices. Also note that the results for the galler-parasitoid community were somewhat similar. In order to more clearly demonstrate the potentially large effects of prior choice, we therefore showcase the results from \emph{Salix}-galler networks in this paragraph.
+		\textbf{R:} This material was indeed placed in an appendix because of space constraints. We have added a figure showing the posterior distributions obtained from both priors and a paragraph summarising \emph{Appendix 7}. As we do not wish to be too demanding with regard to extra space (and our manuscript was essentially at the standard length limit after the last revision), we hope that these smaller additions will be enough to emphasise the potential for spurious results after poor prior choices. Also note that the results for the galler-parasitoid community were somewhat similar. In order to more clearly demonstrate the potentially large effects of prior choice, we therefore showcase the results from \emph{Salix}-galler networks in this paragraph.
 
 
 		Lines 390-405:
