--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -348,7 +348,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   Although 374 sampling sites were not enough to obtain sufficient observations of all species pairs, we were able to reduce uncertainty about many potential interactions using a simple Bayesian framework. This framework allowed us to set confidence intervals about the probability of an unobserved interaction occurring based on the distribution of interactions in one ``pilot'' site. This gives us more reasonable estimates of interaction probabilities than assuming that no unobserved interactions actually occur. Such approaches are particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Our framework could, for example, be used to predict the probability of interaction between a galler and parasitoid at a new site on the frontier of their ranges. If the species have not been observed co-occurring at other sites, we would expect them to interact with a probability of approximately 0.1 rather than assuming that they will not interact because they have not been observed interacting elsewhere (Fig.~\ref{Salix_pdfs_cdfs}). Understanding species' interactions in novel or changing communities is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
 
 
-  Note that, as in all Bayesian analyses, our results do depend on the prior chosen. To demonstrate this, we repeated our analyses using a prior derived from a study of gallers found on several genotypes of \emph{Salix hookeriana} and the parasites which emerged from them (\citealp{Barbour2016,Barbour2016Dryad}; \emph{Appendix S7}). Although the study system is similar to that in~\citet{Kopelke2017}, the network is quite different due to using different genotypes of a single \emph{Salix} species rather than several \emph{Salix} species as the basis for sampling. While this had a relatively small effect on our expectations for the galler-parasitoid community (\emph{Appendix S7}), the prior based on \citep{Barbour2016} resulted in very high probabilities of interaction between \emph{Salix} and galler pairs that were not observed interacting (Fig.~\ref{prior_comparison}). No amount of additional sampling would allow us to conclude that a given \emph{Salix}-galler pair did not interact with a threshold interaction probability of 0.01. This is reasonable for the situation described in~\citet{Barbour2016}, as it is very likely that gallers which can interact with one \emph{S. hookeriana} genotype can interact with most others, but is not reasonable for the more diverse community in~\citet{Kopelke2017}. This demonstrates the importance of conducting a "sanity check" on the posterior distribution obtained from any given prior.
+  Note that, as in all Bayesian analyses, our results do depend on the prior chosen. To demonstrate this, we repeated our analyses using a prior derived from a study of gallers found on several genotypes of \emph{Salix hookeriana} and the parasites which emerged from them (\citealp{Barbour2016,Barbour2016Dryad}; \emph{Appendix S7}). Although the study system is similar to that in~\citet{Kopelke2017}, the network is quite different due to using different genotypes of a single \emph{Salix} species rather than several \emph{Salix} species as the basis for sampling. While this had a relatively small effect on our expectations for the galler-parasitoid community (\emph{Appendix S7}), the prior based on \citep{Barbour2016} resulted in very high probabilities of interaction between \emph{Salix} and galler pairs that were not observed interacting (Fig.~\ref{prior_comparison}). No amount of additional sampling would allow us to conclude that a given \emph{Salix}-galler pair did not interact with a threshold interaction probability of 0.01. This is reasonable for the situation described in~\citet{Barbour2016}, as it is very likely that gallers which can interact with one \emph{S. hookeriana} genotype can interact with most others, but is not reasonable for the more diverse community in~\citet{Kopelke2017}. This demonstrates the importance of conducting a ``sanity check" on the posterior distribution obtained from any given prior.
 
 
   % Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. This poor detection rate is similar to that reported in other studies~\citep{Bartomeus2013,Jordano2016,Weinstein2017a}. If our descriptions of empirical systems are generally missing so many feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
