--- a/manuscript/reply_to_reviewers_2.tex
+++ b/manuscript/reply_to_reviewers_2.tex
@@ -44,7 +44,7 @@
 	\end{refquote}
 
 
-	\textbf{R:} We appreciate the additional comments from the Referee, and agree that prior detection can be quite a challenge. We are therefore quite happy to add to our discussion about how to detect potential problems. Note, however, that after making the additions requested by the previous round of reviews our manuscript was very close to the standard word limit for \textbf{Methods in Ecology and Evolution}. To meaningfully expand our discussion of how to detect problems with priors we must therefore ask for more space. We have kept our addition to the discussion as succinct as possible, and the revised manuscript is now approximately 7433 words. We hope that this additional length is justified by our efforts to address the Reviewer's remaining concerns.
+	\textbf{R:} We appreciate the additional comments from the Referee, and agree that the definition of adequate priors can be quite a challenge. We are therefore quite happy to add to our discussion about how to detect potential problems. Note, however, that after making the additions requested by the previous round of reviews our manuscript was very close to the standard word limit for \textbf{Methods in Ecology and Evolution}. To meaningfully expand our discussion of how to detect problems with priors we must therefore ask for more space-- a solution also explicitly recommended by the Reviewer. We have kept our addition to the discussion as succinct as possible, and the revised manuscript is now approximately 7433 words. We hope that this additional length is justified by our efforts to address the Reviewer's remaining concerns.
 
 
 	Thanks again to the Associate Editor and Reviewer for their comments. We believe that the manuscript has been much improved by their feedback.
@@ -72,7 +72,7 @@
 	\end{refquote}
 
 
-	We thank the Reviewer for his further feedback and address each point (prefaced by \textbf{R:}) below.
+	We thank the Reviewer for his previous and further feedback and address each point (prefaced by \textbf{R:}) below.
 
 	1. Re-emphasise Figure 3. 
 
@@ -105,16 +105,17 @@
 		\end{refquote}
 
 
-		\textbf{R:} We do not share the Reviewer's negative view of empirical Bayes. Perhaps this is a matter of perspective: in a system where a great deal of information about the traits structuring interactions is known and trait values are available for most species, it is absolutely best to use a trait-based model to predict interactions. This is why we began our section on informative priors with trait-based models and only introduce empirical and approximate Bayes as solutions where trait information/models are lacking or where over-fitting is a strong concern. Most of the authors of this manuscript are more used to such relatively information-poor systems. In these cases, we agree that empirical Bayes is not perfect but argue that it is much better than nothing (or an uninformative prior, as long as a somewhat similar network is available).
+		\textbf{R:} We appreciate but do not fully share the Reviewer's negative view of empirical Bayes. Perhaps this is a matter of perspective: in a system where a great deal of information about the traits structuring interactions is known and trait values are available for most species, trait-based models are indeed often a good way to predict interactions (although far from fool-proof, as the Reviewer points out). This is why we began our section on informative priors with trait-based models and only introduce empirical and approximate Bayes as solutions where trait information/models are lacking or where over-fitting is a strong concern. Most of the authors of this manuscript are more used to such relatively information-poor systems. In these cases, we agree that empirical Bayes is not perfect, but argue that it is much better than nothing (or an uninformative prior, as long as a somewhat similar network is available).
 
 
-		The Jeffreys prior gives a maximum likelihood estimate of 0.5 for the probability of an interaction between two species which have never been observed together. Based on our understanding of ecological systems, this seems highly unlikely. Certainly species differ in many ways, but they also do have some similarities, such as limited foraging time and somewhat consistent morphologies. Because of behavioural, morphological, or temporal limits to the number of partners with which a given species can interact, most ecological networks are sparse and most well-sampled species interact with only a small subset of their potential partners (extreme generalists in highly nested mutualistic networks being a notable exception). We can therefore reasonably expect that a species entering a new habitat, for example, will interact with far fewer than half of the available partners. If we do not know which traits strongly affect interactions involving the focal species, or if those traits are not known for all of the species in the network, we cannot use a trait-based model to predict interaction frequencies. This leaves empirical and approximate Bayes as the only viable options unless we are willing to revert to the assumption that unobserved interactions never occur. Certainly empirical Bayes is not perfect, but we are strongly confident that it is still gives more reasonable expectations than ignoring the ecological networks literature.
+		[[Currently one vote for removing this paragraph and one vote for keeping it and strengthening the point]]
+		The Jeffreys prior gives a maximum likelihood estimate of 0.5 for the probability of an interaction between two species which have never been observed together. Based on our understanding of ecological systems, this seems highly unlikely. Certainly species differ in many ways, but they also do have some similarities, such as limited foraging time and somewhat consistent morphologies. Because of behavioural, morphological, or temporal limits to the number of partners with which a given species can interact, most ecological networks are sparse and most well-sampled species interact with only a small subset of their potential partners (extreme generalists in highly nested mutualistic networks being a notable exception). We can therefore reasonably expect that a species entering a new habitat, for example, will interact with far fewer than half of the available partners. If we do not know which traits strongly affect interactions involving the focal species, or if those traits are not known for all of the species in the network, we cannot use a trait-based model to predict interaction frequencies. This leaves empirical and approximate Bayes as the only viable options, unless we are willing to revert to the assumption that unobserved interactions never occur. Certainly empirical Bayes is not perfect, but we are confident that it is still gives more reasonable expectations than ignoring the ecological networks literature.
 
 
-		Moreover, while we agree that empirical Bayes does not take differences in niche proxies into account, this may not be crucial in all studies. Researchers are often more interested in the overall structure of the network or in some emergent property such as stability than in the relationships between niche proxies and interaction frequencies. In such cases, the number of additional interactions we expect to be observed with further sampling is likely more important than the exact identity of those interactions, and an empirical Bayes approach is reasonable if a good trait-based model and trait information or not available. 
+		Moreover, while we agree that empirical Bayes does not take differences in niche proxies into account, this may not be crucial in all studies. Researchers are often more interested in the overall structure of the network or in some emergent property such as stability than in the relationships between niche proxies and interaction frequencies. In such cases, the number of additional interactions that we expect to be observed with further sampling is likely more important than the exact identity of those interactions, and an empirical Bayes approach is reasonable if a good trait-based model and trait information or not available. 
 
 
-		Finally, we disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasise the need to use similar networks to construct an empirical Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. 
+		Finally, we disagree with the Reviewer's contention that ``empirical Bayes assumes a kind of commonality among all networks". This is not so; empirical Bayes only assumes some commonality between the focal network and those used to construct the prior. We have revised the text to emphasise the need to use similar networks to construct an empirical Bayes prior and note that \emph{Appendix S7} demonstrates the pitfalls of basing an empirical Bayes prior on a network with little commonality with the focal system. [[The importance of using prior information from similar networks is a small but very important point that refers back to the core of our argument: if informatiom about a focal system is limited, then closing our eyes to what is known about similar networks and assuming \emph{a priori} that an unobserved interaction in any system is either equally (and rather highly) likely or equally impossible seems more than ``vaguely anti-ecology". After all, ecology advances by building upon previous insights and not by ignoring them in an effort to be ``conservative". It is essential to realise that ``uninformative" priors can lead to very biased results, just as poorly-chosen informative priors can. ]][[This last portion strengthens the point in paragraph 2 but may be too much.]]
 
 
 		We believe that including an expanded reference to \emph{Appendix S7} as suggested below will help to address some of these concerns by demonstrating that empirical Bayes should \emph{not} be based on networks which have major differences from the focal system as this will lead to unreasonable predictions (in our case, although the taxa and interaction types involved were similar, the taxonomic resolution in the \citet{Barbour2016} and \citet{Kopelke2017} were very different). To reinforce this point and make the role of empirical Bayes as a solution in the absence of trait-based models and/or trait information, we have made several minor revisions to the section introducing informative priors. We hope that these changes will be sufficient to illustrate the drawbacks to empirical Bayes without being overly discouraging for those who lack the necessary information to construct more detailed informative priors.
@@ -178,7 +179,7 @@
 
 		\begin{quotation}
 
-		  Note that, as in all Bayesian analyses, our results do depend on the prior chosen. To demonstrate this, we repeated our analyses using a prior derived from a study of gallers found on several genotypes of \emph{Salix hookeriana} and the parasites which emerged from them (\citealp{Barbour2016,Barbour2016Dryad}; \emph{Appendix S7}). Although the study system is similar to that in~\citet{Kopelke2017}, the network is quite different due to using different genotypes of a single \emph{Salix} species rather than several \emph{Salix} species as the basis for sampling. While this had a relatively small effect on our expectations for the galler-parasitoid community (\emph{Appendix S7}), the prior based on \citep{Barbour2016} resulted in very high probabilities of interaction between \emph{Salix} and galler pairs that were not observed interacting (Fig. 4). No amount of additional sampling would allow us to conclude that a given \emph{Salix}-galler pair did not interact with a threshold interaction probability of 0.01. This is reasonable for the situation described in~\citet{Barbour2016}, as it is very likely that gallers which can interact with one \emph{S. hookeriana} genotype can interact with most others, but is not reasonable for the more diverse community in~\citet{Kopelke2017}. This demonstrates the importance of conducting a "sanity check" on the posterior distribution obtained from any given prior.
+		  Note that, as in all Bayesian analyses, our results do depend on the prior chosen. To demonstrate this, we repeated our analyses using a prior derived from a study of gallers found on several genotypes of \emph{Salix hookeriana} and the parasites which emerged from them (\citealp{Barbour2016,Barbour2016Dryad}; \emph{Appendix S7}). Although the study system is similar to that in~\citet{Kopelke2017}, the network is quite different due to using different genotypes of a single \emph{Salix} species rather than several \emph{Salix} species as the basis for sampling. While this had a relatively small effect on our expectations for the galler-parasitoid community (\emph{Appendix S7}), the prior based on \citep{Barbour2016} resulted in very high probabilities of interaction between \emph{Salix} and galler pairs that were not observed interacting (Fig. 4). No amount of additional sampling would allow us to conclude that a given \emph{Salix}-galler pair did not interact with a threshold interaction probability of 0.01. This is reasonable for the situation described in~\citet{Barbour2016}, as it is very likely that gallers which can interact with one \emph{S. hookeriana} genotype can interact with most others, but is not reasonable for the more diverse community in~\citet{Kopelke2017}. This demonstrates the importance of conducting a ``sanity check" on the posterior distribution obtained from any given prior.
 
 		\end{quotation}
 
