commented out figures for manuscriptcentral

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -387,7 +387,7 @@ All data used in this study have been independently published and are accessible
     \indent After combining these layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (bottom) is a subsample of the true matrix where the probability of observing each interaction depends upon multiple layers of uncertainty. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not. For an illustration of the way in which these levels of uncertainty combine in simulated data, and the effects of uncertainty on network structure, see \emph{Appendix S1}. Attributions for images are given in \emph{Appendix S1-A}.}
     \label{conceptual_fig}
     \begin{center}
-    \includegraphics*[height=.45\textheight]{figures/conceptual_fig.eps}
+    % \includegraphics*[height=.45\textheight]{figures/conceptual_fig.eps}
     % \includegraphics*[height=.5\textheight]{Figure_1.eps}
     \end{center}
     \end{figure}
@@ -399,7 +399,7 @@ All data used in this study have been independently published and are accessible
       \textbf{C)} For each species pair, the number of observed interactions plotted against the number of observed co-occurrences. The red, dashed line indicates a 1:1 relationship.}
       \label{histograms}
       \begin{center}
-      \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
+      % \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
       % \includegraphics*[height=.6\textheight]{Figure_2.eps}
       \end{center}
       \end{figure}
@@ -410,7 +410,7 @@ All data used in this study have been independently published and are accessible
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda_{ij}<0.10$ but over 100 co-occurrences to be 95\% confident that $\lambda_{ij}<0.01$.}
     \label{Salix_pdfs_cdfs}
     \begin{center}
-    \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
+    % \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
     % \includegraphics*[width=.8\textwidth]{Figure_3.eps}
     \end{center}
     \end{figure}
@@ -421,7 +421,7 @@ All data used in this study have been independently published and are accessible
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. Note that both priors constrain the MLE of $\lambda_{ij}$ above 0.1 and that the posterior probability distributions become similar for very high $n$.}
     \label{prior_comparison}
     \begin{center}
-    \includegraphics*[width=.8\textwidth]{figures/SG_pdfs_prior_comparison.eps}
+    % \includegraphics*[width=.8\textwidth]{figures/SG_pdfs_prior_comparison.eps}
     % \includegraphics*[width=.8\textwidth]{Figure_4.eps}
     \end{center}
     \end{figure}
